# floop-bench

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  SPEC.md  gemini__gemini-2.5-flash.mswea_floop_eval.json  main.py  pyproject.toml  ralph.sh
.floop/: corrections.jsonl  manifest.yaml  nodes.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
agents/: README.md  __init__.py  base.py  claude_code.py  mini_swe.py  mini_swe_cli.py
analysis/: analyze.py  charts.py
config/: Modelfile.qwen-nothinker  arms.toml  mswea_bare.yaml  mswea_floop.yaml  ollama_bare.yaml  ollama_floop.yaml  splits.json
config/behaviors/: swe-bench-expert.fpack
docs/: ARCHITECTURE.md  RUNBOOK.md  TRAINING.md
floop_integration/: __init__.py  cli.py  inject.py
harness/: config.py  db.py  orchestrator.py  parallel.py  runner.py  swebench_eval.py
results/predictions/: flash_floop_3.jsonl  flash_placebo.jsonl  gemini_flash_bare_eval.jsonl  gemini_pro_bare.jsonl  mswea_bare.jsonl  mswea_floop.jsonl  pro_floop_3.jsonl
results/swebench_reports/: gemini__gemini-2.5-flash.eval_bare.json  gemini__gemini-2.5-flash.eval_flash_floop_3.json  gemini__gemini-2.5-flash.eval_flash_placebo.json  gemini__gemini-2.5-flash.eval_floop.json  gemini__gemini-2.5-flash.mswea_bare_eval.json  (+5 more)
scripts/: check_leakage.py  estimate_cost.py  generate_split.py  run_mswea.py  run_overnight.sh  validate_harness.py  validate_mswea.py  wait_and_run_floop.sh
