[project]
name = "floop-bench"
version = "0.1.0"
description = "Benchmark harness to measure floop's impact on SWE-bench performance"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "datasets>=2.0",
    "matplotlib>=3.0",
    "scipy>=1.0",
    "numpy>=1.24",
    "tomli>=2.0;python_version<'3.11'",
    "litellm>=1.0",
]

[project.optional-dependencies]
eval = ["swebench>=2.0"]
