[project]
name = "floop-bench"
version = "0.1.0"
description = "Benchmark harness to measure floop's impact on SWE-bench performance"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "datasets>=2.0",
    "matplotlib>=3.0",
    "scipy>=1.0",
    "numpy>=1.24",
    "tomli>=2.0;python_version<'3.11'",
    "litellm>=1.0",
    "swebench>=4.1.0",
    "mini-swe-agent>=2.2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
